--- a/src/static/index.html
+++ b/src/static/index.html
@@ -46,5 +46,29 @@
     </footer>
 
     <script src="app.js"></script>
+      <style>
+        .participants-section {
+          margin-top: 12px;
+          padding: 10px;
+          background-color: #e3f2fd;
+          border-radius: 4px;
+          border: 1px solid #bbdefb;
+        }
+        .participants-section h5 {
+          margin-bottom: 8px;
+          color: #1976d2;
+          font-size: 1rem;
+        }
+        .participants-list {
+          margin-left: 18px;
+          margin-bottom: 0;
+          color: #333;
+        }
+        .participants-list li {
+          margin-bottom: 4px;
+          font-size: 0.97rem;
+          letter-spacing: 0.02em;
+        }
+      </style>
   </body>
 </html>
